fixed header bug when screen got too small

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -104,6 +104,7 @@ body:not(.checkin)>header {
     padding: 1.5em;
     background-color: var(--secondary1);
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
